--- a/backend/api/src/main/resources/config.yaml
+++ b/backend/api/src/main/resources/config.yaml
@@ -5,7 +5,7 @@ kumuluzee:
     name: dev
   datasources:
   - jndi-name: jdbc/EhiveDS
-    connection-url: jdbc:postgresql://127.0.0.1:53514/pkp
+    connection-url: jdbc:postgresql://localhost:5432/pkp
     username: postgres
     password: PGpostgres
     max-pool-size: 20
