--- a/backend/api/pom.xml
+++ b/backend/api/pom.xml
@@ -20,11 +20,24 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-servlet-jetty</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-json-p-jsonp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-json-b-yasson</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>si.uni-lj.fs.kmtm</groupId>
             <artifactId>storitve</artifactId>
         </dependency>
+
 
     </dependencies>
 
