--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ buildNumber.properties
 
 *.iml
 
-node_modules
 
 ## Directory-based project format:
 .idea/
@@ -159,6 +158,28 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+.DS_Store
+node_modules/
+/dist/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
 
 
 
