popravki backend, omogočajo povezovanje frontenda, drug port, dodan cors

--- a/backend/api/pom.xml
+++ b/backend/api/pom.xml
@@ -37,6 +37,11 @@
             <groupId>si.uni-lj.fs.kmtm</groupId>
             <artifactId>storitve</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+            <version>${kumuluzee-cors.version}</version>
+        </dependency>
 
 
     </dependencies>
