--- a/backend/api/src/main/resources/config.yaml
+++ b/backend/api/src/main/resources/config.yaml
@@ -3,6 +3,10 @@ kumuluzee:
   version: 1.0.0
   env:
     name: dev
+  server:
+    base-url: http://localhost:8081
+    http:
+      port: 8081
   datasources:
   - jndi-name: jdbc/EhiveDS
     connection-url: jdbc:postgresql://localhost:5432/pkp
