--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,6 +22,7 @@
         <postgresql.version>42.2.5</postgresql.version>
         <kumuluzee.version>3.0.0</kumuluzee.version>
         <kumuluzee-rest.version>1.2.3</kumuluzee-rest.version>
+        <kumuluzee-cors.version>1.0.5</kumuluzee-cors.version>
     </properties>
 
     <dependencyManagement>
