--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
+    "global": "^4.4.0",
+    "jquery": "^3.5.1",
+    "moment": "^2.25.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
@@ -45,7 +48,9 @@
       "indent": "off",
       "no-tabs": "off",
       "space-before-function-paren": "off",
-      "no-multiple-empty-lines":"off"
+      "no-multiple-empty-lines": "off",
+      "eol-last": "off",
+      "quotes": "off"
     }
   },
   "browserslist": [
