--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "jquery": "^3.5.1",
     "moment": "^2.25.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-scroll-loader": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
