--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "moment": "^2.25.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vue-scroll-loader": "^2.2.0"
+    "vue-scroll-loader": "^2.2.0",
+    "vue2-datepicker": "^3.5.0",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
