--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "global": "^4.4.0",
     "jquery": "^3.5.1",
     "moment": "^2.25.3",
+    "stream-to-blob": "^2.0.1",
     "vue": "^2.6.11",
+    "vue-filereader": "^0.1.1",
+    "vue-load-image": "^0.1.10",
     "vue-router": "^3.1.6",
     "vue-scroll-loader": "^2.2.0",
     "vue2-datepicker": "^3.5.0",
@@ -53,7 +56,11 @@
       "space-before-function-paren": "off",
       "no-multiple-empty-lines": "off",
       "eol-last": "off",
-      "quotes": "off"
+      "quotes": "off",
+      "no-return-assign": "off",
+      "vue/no-unused-components": "off",
+      "padded-blocks": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
