--- a/backend/api/src/main/resources/config.yaml
+++ b/backend/api/src/main/resources/config.yaml
@@ -4,7 +4,8 @@ kumuluzee:
   env:
     name: dev
   server:
-    base-url: http://localhost:8081
+#    base-url: http://localhost:8081
+    base-url: 83.212.82.142:8081
     http:
       port: 8081
   datasources:
