--- a/backend/api/src/main/resources/config.yaml
+++ b/backend/api/src/main/resources/config.yaml
@@ -12,5 +12,5 @@ kumuluzee:
   - jndi-name: jdbc/EhiveDS
     connection-url: jdbc:postgresql://localhost:5432/pkp
     username: postgres
-    password: PGpostgres
+    password: postgresHIVE
     max-pool-size: 20
